fixes for ranking summary center aligning

--- a/www/views/global-components/ranking-summary/ranking-summary.scss
+++ b/www/views/global-components/ranking-summary/ranking-summary.scss
@@ -5,7 +5,7 @@ ranking-summary {
             width: 330px;
             height: 60px;
             text-align: center;
-            margin: 2rem 0 3rem 0;
+            margin: 2rem auto 3rem auto;
 
             span {
                 position: relative;
